Handling invalid requests

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/index.js",
     "test-positive": "newman run \"./postman/collections/Bookings API.json\" -e \"./postman/environments/Local.postman_environment.json\"",
     "test-negative": "newman run \"./postman/collections/Bookings API Negative.json\" -e \"./postman/environments/Local.postman_environment.json\"",
+    "pretest": "npm run reset-db",
     "test": "npm run test-positive && npm run test-negative",
     "reset-db": "npx prisma db push --force-reset && npx prisma db seed",
     "clean-start": "npx prisma db push --force-reset && npx prisma db seed && npm run dev"
